# playgroup_llm_202509

./: .gitignore  README.md  create_retroactive_checkpoint.py  method1_text_prompt.py  method2_reflexion.py  pyproject.toml  representations.py  requirements.txt  run_all_problems.py  run_batch_experiments.py  run_batch_tests.sh  run_code.py  test_refactoring.py  test_retry_logic.py  test_run_code.py  test_statistics_aggregator.py  utils.py
analysis/: __init__.py  difficulty_classifier.py  experiment_aggregator.py  experiment_summarizer.py  performance_grader.py  statistics_aggregator.py
core/: __init__.py  checkpoint_manager.py  experiment_argument_parser.py  experiment_config.py  experiment_coordinator.py  experiment_executor.py  experiment_loop_orchestrator.py  experiment_validator.py  service_registry.py  timing_tracker.py
docs/: BATCH_RUNNER.md  CLI_REFERENCE.md  DEVELOPMENT.md  IMPROVEMENTS.md  WALKTHROUGH.md
documentation/: CHECKPOINT_GUIDE.md  PROJECT_REORGANIZATION_PLAN.md  REFACTORING_PLAN.md
domain/: __init__.py  experiment_state.py  stats_models.py  value_objects.py
output/: __init__.py  console_display.py  failure_formatter.py  iteration_formatter.py  output_generator.py  report_writer.py
prompts/: 250926b_arc_spelke_informed_nl_analysis_prompt.md  assessing-train-test-eval-data.md  baseline_justjson_enhanced.j2  baseline_justjson_spelke.j2  baseline_wplaingrid_enhanced.j2  baseline_wplaingrid_spelke.j2  baseline_wquotedgridcsv_excel_enhanced.j2  enhanced_arc_master_framework.md  problem_category_sub_prompt.md  reflexion_enhanced.j2  (+1 more)
(+47 files in other folders)
